testcases/hereiam/positive/login_TC1.sah
_setValue(_textbox("userId"), "anh123");
_setValue(_password("password"), "welcome");
_click(_div("LOGIN"));
